# rig-bdi-workspace

./: .gitignore  Cargo.toml  Makefile  README.md  bdi-agent-architecture-prompt.md  incident-agent-tauri-prompt.md
agent-core/: Cargo.toml
agent-core/src/: agent.rs  event_log.rs  executor.rs  facts.rs  lib.rs  llm.rs  planner.rs  rules.rs  runbooks.rs  streams.rs  tools.rs
agent-server/: Cargo.toml
agent-server/src/: main.rs  webhook.rs
fact-registry/: Cargo.toml
fact-registry/src/: lib.rs
incident-ui/: Cargo.toml  index.html
incident-ui/src/: app.rs  bridge.rs  dto.rs  main.rs
rig-bdi/: Cargo.toml
rig-effects/: Cargo.toml
rig-effects-derive/: Cargo.toml
rig-effects-derive/src/: lib.rs
rig-effects/src/: lib.rs
rig-effects/tests/: effectful_derive.rs
rig-planner/: Cargo.toml
rig-rete/: Cargo.toml
rig-rete-derive/: Cargo.toml
rig-rete/src/: lib.rs
src/: app.rs  bridge.rs  dto.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  runtime.rs  state.rs
src/components/: belief_viewer.rs  dashboard.rs  escalation_panel.rs  incident_list.rs  metrics_panel.rs  plan_viewer.rs  timeline.rs
ui/: incident-ui-38f3f3f676e084a0.js  incident-ui-38f3f3f676e084a0_bg.wasm  incident-ui-b767839a386de47.js  incident-ui-b767839a386de47_bg.wasm  index.html
