[package]
name = "agent-server"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-core = { path = "../agent-core" }
fact-registry = { path = "../fact-registry" }
serde_json = "1"
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
