[package]
name = "src-tauri"
version = "0.1.0"
edition = "2021"

[features]
default = []
tauri-app = ["dep:tauri", "dep:tokio", "dep:agent-server", "dep:axum"]

[dependencies]
agent-core = { path = "../agent-core" }
agent-server = { path = "../agent-server", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = ["api-all"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "net"], optional = true }
axum = { version = "0.7", optional = true }

[build-dependencies]
tauri-build = { version = "1" }
